# serializer version: 1
# name: test_compute_provenance_different_algorithms_snapshot[md5]
  list([
    'd50d88fd',
    '1d7aa08f',
    '54fed8a7',
  ])
# ---
# name: test_compute_provenance_different_algorithms_snapshot[sha256]
  list([
    'b350736a',
    'df352a9c',
    '67f17dc0',
  ])
# ---
# name: test_compute_provenance_different_algorithms_snapshot[xxhash64]
  list([
    '96465930',
    '63098064',
    '72834691',
  ])
# ---
# name: test_compute_provenance_multiple_upstreams
  list([
    dict({
      'field_provenance': dict({
        'analysis': '10273147',
        'fusion': '57677343',
      }),
      'sample_provenance': '35194752',
      'sample_uid': 1,
    }),
    dict({
      'field_provenance': dict({
        'analysis': '53154544',
        'fusion': '88864267',
      }),
      'sample_provenance': '14625327',
      'sample_uid': 2,
    }),
    dict({
      'field_provenance': dict({
        'analysis': '14706124',
        'fusion': '16196686',
      }),
      'sample_provenance': '47662032',
      'sample_uid': 3,
    }),
  ])
# ---
# name: test_compute_provenance_selective_field_deps
  list([
    dict({
      'field_provenance': dict({
        'audio_only': '28561579',
        'mixed': '10222597',
        'visual': '12627517',
      }),
      'sample_provenance': '76277066',
      'sample_uid': 1,
    }),
    dict({
      'field_provenance': dict({
        'audio_only': '11464889',
        'mixed': '80193350',
        'visual': '91356045',
      }),
      'sample_provenance': '17032603',
      'sample_uid': 2,
    }),
  ])
# ---
# name: test_compute_provenance_single_upstream
  list([
    dict({
      'field_provenance': dict({
        'default': '96465930',
      }),
      'sample_provenance': '81606296',
      'sample_uid': 1,
    }),
    dict({
      'field_provenance': dict({
        'default': '63098064',
      }),
      'sample_provenance': '11608157',
      'sample_uid': 2,
    }),
    dict({
      'field_provenance': dict({
        'default': '72834691',
      }),
      'sample_provenance': '84526014',
      'sample_uid': 3,
    }),
  ])
# ---
